--- a/static/index.html
+++ b/static/index.html
@@ -944,7 +944,7 @@
             <div class="absolute inset-0 bg-black/50 backdrop-blur-sm" @click="closeCommandPalette"></div>
 
             <!-- Palette Container Wrapper (Positioning) -->
-            <div class="absolute top-[33vh] left-1/2 -translate-x-1/2 w-[90%] sm:w-full max-w-2xl z-[1001]" @click.stop>
+            <div class="absolute top-[60px] left-1/2 -translate-x-1/2 w-[90%] sm:w-full max-w-2xl z-[1001]" @click.stop>
                 <!-- Animated Content Box -->
                 <div
                     class="w-full bg-white dark:bg-[#2E3440] rounded-xl shadow-2xl overflow-hidden flex flex-col max-h-[40vh] border border-gray-200 dark:border-[#3B4252] animate-fade-in-up">
