--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content">
     <title>SHYNOTE</title>
     <link rel="icon" href="/static/favicon.ico">
     <link rel="manifest" href="/static/manifest.json">
@@ -29,9 +29,10 @@
             document.documentElement.classList.add('dark');
         }
 
-        // Fix iPhone Safari viewport height for address bar hiding
+        // Fix iPhone Safari viewport height for address bar hiding & Keyboard resizing
         function setViewportHeight() {
-            const vh = window.innerHeight * 0.01;
+            const height = window.visualViewport ? window.visualViewport.height : window.innerHeight;
+            const vh = height * 0.01;
             document.documentElement.style.setProperty('--vh', `${vh}px`);
         }
 
@@ -40,7 +41,7 @@
             if (window.scrollY < 1) {
                 window.scrollTo(0, 1);
             }
-            setViewportHeight();
+            // setViewportHeight(); // Removed redundant call
         }
 
         // Set initial viewport height
@@ -50,6 +51,16 @@
         setTimeout(forceAddressBarHide, 100);
 
         // Update on resize and orientation change
+        // Use visualViewport if available for smoother keyboard handling
+        if (window.visualViewport) {
+            window.visualViewport.addEventListener('resize', () => {
+                requestAnimationFrame(setViewportHeight);
+            });
+            window.visualViewport.addEventListener('scroll', () => {
+                requestAnimationFrame(setViewportHeight);
+            });
+        }
+
         let resizeTimer;
         window.addEventListener('resize', () => {
             clearTimeout(resizeTimer);
@@ -2019,4 +2030,3 @@
 </body>
 
 </html>
-```
