--- a/static/index.html
+++ b/static/index.html
@@ -551,36 +551,37 @@
             class="fixed inset-0 bg-black/50 z-[70] flex items-center justify-center backdrop-blur-sm"
             @click.self="closeTableEditor">
             <div
-                class="bg-white dark:bg-[#2E3440] rounded-xl shadow-2xl w-[90vw] max-w-xl max-h-[80vh] flex flex-col border border-slate-200 dark:border-[#3B4252]">
+                class="bg-white dark:bg-[#2E3440] rounded-xl shadow-2xl w-[90vw] max-w-lg max-h-[80vh] flex flex-col border border-slate-200/60 dark:border-[#3B4252]/50">
                 <!-- Header -->
                 <div
-                    class="flex items-center justify-between px-4 py-1.5 border-b border-slate-200 dark:border-[#3B4252]">
-                    <h3 class="text-base font-bold text-slate-800 dark:text-white">Edit Table</h3>
+                    class="flex items-center justify-between px-4 py-1 border-b border-slate-100 dark:border-[#3B4252]/50">
+                    <h3 class="text-xs font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider">Edit
+                        Table</h3>
                     <button @click="closeTableEditor"
-                        class="p-1 rounded-full hover:bg-slate-100 dark:hover:bg-[#4C566A] transition-colors">
-                        <span class="material-symbols-rounded text-slate-400">close</span>
+                        class="p-0.5 rounded-full hover:bg-slate-100 dark:hover:bg-[#4C566A] transition-colors">
+                        <span class="material-symbols-rounded text-slate-400 text-[18px]">close</span>
                     </button>
                 </div>
                 <!-- Spreadsheet Grid -->
-                <div class="flex-1 overflow-auto p-1.5">
+                <div class="flex-1 overflow-auto p-1 bg-slate-50/30 dark:bg-black/10">
                     <table class="w-full border-collapse">
                         <thead>
                             <tr>
                                 <th v-for="(col, cIdx) in tableEditorState.colCount" :key="'header-'+cIdx"
-                                    class="border border-slate-300 dark:border-[#4C566A] bg-slate-100 dark:bg-[#3B4252] p-0 min-w-[100px]">
+                                    class="border border-slate-200/60 dark:border-[#4C566A]/40 bg-slate-50/50 dark:bg-[#3B4252]/30 p-0 min-w-[80px]">
                                     <input v-model="tableEditorState.tableData[0][cIdx]"
                                         @focus="tableEditorState.activeCol = cIdx; tableEditorState.activeRow = 0"
-                                        class="w-full bg-transparent text-center text-sm font-medium text-slate-700 dark:text-[#ECEFF4] outline-none px-2 py-1">
+                                        class="w-full bg-transparent text-center text-[11px] font-bold text-slate-600 dark:text-[#D8DEE9] outline-none px-1.5 py-0.5">
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr v-for="(row, rIdx) in tableEditorState.tableData.slice(1)" :key="'row-'+rIdx">
                                 <td v-for="(cell, cIdx) in row" :key="'cell-'+rIdx+'-'+cIdx"
-                                    class="border border-slate-300 dark:border-[#4C566A] p-0">
+                                    class="border border-slate-200/60 dark:border-[#4C566A]/40 p-0">
                                     <input v-model="tableEditorState.tableData[rIdx + 1][cIdx]"
                                         @focus="tableEditorState.activeCol = cIdx; tableEditorState.activeRow = rIdx + 1"
-                                        class="w-full bg-transparent text-sm text-slate-700 dark:text-[#ECEFF4] outline-none px-2 py-1"
+                                        class="w-full bg-transparent text-[11px] text-slate-600 dark:text-[#ECEFF4] outline-none px-1.5 py-0.5"
                                         @change="tableEditorState.tableData[rIdx + 1][cIdx] = $event.target.value">
                                 </td>
                             </tr>
@@ -589,34 +590,34 @@
                 </div>
                 <!-- Footer -->
                 <div
-                    class="flex items-center justify-between px-4 py-1.5 border-t border-slate-200 dark:border-[#3B4252] bg-slate-50 dark:bg-[#3B4252]">
-                    <div class="flex gap-1.5">
+                    class="flex items-center justify-between px-4 py-1 border-t border-slate-100 dark:border-[#3B4252]/50 bg-white dark:bg-[#2E3440]">
+                    <div class="flex gap-1">
                         <button
                             @click="tableEditorState.tableData.push(new Array(tableEditorState.colCount).fill('')); tableEditorState.rowCount++"
-                            class="px-2 py-1 text-xs font-medium text-slate-600 dark:text-[#D8DEE9] bg-white dark:bg-[#2E3440] border border-slate-300 dark:border-[#4C566A] rounded-lg hover:bg-slate-50 dark:hover:bg-[#4C566A] transition-colors">
+                            class="px-1.5 py-0.5 text-[10px] font-medium text-slate-400 dark:text-slate-500 bg-white dark:bg-[#2E3440] border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-slate-50 dark:hover:bg-[#4C566A]/20 transition-colors">
                             + Row
                         </button>
                         <button
                             @click="() => { tableEditorState.colCount++; tableEditorState.tableData.forEach(row => row.push('')); }"
-                            class="px-2 py-1 text-xs font-medium text-slate-600 dark:text-[#D8DEE9] bg-white dark:bg-[#2E3440] border border-slate-300 dark:border-[#4C566A] rounded-lg hover:bg-slate-50 dark:hover:bg-[#4C566A] transition-colors">
+                            class="px-1.5 py-0.5 text-[10px] font-medium text-slate-400 dark:text-slate-500 bg-white dark:bg-[#2E3440] border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-slate-50 dark:hover:bg-[#4C566A]/20 transition-colors">
                             + Col
                         </button>
                         <button @click="deleteActiveRow"
-                            class="px-2 py-1 text-xs font-medium text-red-600 dark:text-red-400 bg-white dark:bg-[#2E3440] border border-slate-300 dark:border-[#4C566A] rounded-lg hover:bg-red-50 dark:hover:bg-red-900/20 transition-colors">
+                            class="px-1.5 py-0.5 text-[10px] font-medium text-red-300/70 border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-red-50 dark:hover:bg-red-900/10 transition-colors">
                             - Row
                         </button>
                         <button @click="deleteActiveCol"
-                            class="px-2 py-1 text-xs font-medium text-red-600 dark:text-red-400 bg-white dark:bg-[#2E3440] border border-slate-300 dark:border-[#4C566A] rounded-lg hover:bg-red-50 dark:hover:bg-red-900/20 transition-colors">
+                            class="px-1.5 py-0.5 text-[10px] font-medium text-red-300/70 border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-red-50 dark:hover:bg-red-900/10 transition-colors">
                             - Col
                         </button>
                     </div>
                     <div class="flex gap-2">
                         <button @click="closeTableEditor"
-                            class="px-3 py-1.5 text-xs font-medium text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-200">
+                            class="px-2 py-1 text-[11px] font-medium text-slate-400 hover:text-slate-600 dark:hover:text-slate-300 transition-colors">
                             Cancel
                         </button>
                         <button @click="saveTableEditor(tableEditorState.tableData)"
-                            class="px-3 py-1.5 text-xs font-medium text-white bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors shadow-sm">
+                            class="px-2.5 py-0.5 text-[11px] font-medium text-white bg-blue-500/80 hover:bg-blue-600/80 rounded transition-colors shadow-sm">
                             Save
                         </button>
                     </div>
@@ -1848,6 +1849,12 @@
                                                     class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
                                                     title="Task List">
                                                     <span class="material-symbols-rounded text-[18px]">check_box</span>
+                                                </button>
+                                                <button @mousedown.prevent="triggerTableEditor()"
+                                                    class="p-1 hover:bg-slate-100 dark:hover:bg-[#434C5E] rounded transition-colors"
+                                                    title="Table (Create/Edit)">
+                                                    <span
+                                                        class="material-symbols-rounded text-[18px]">table_chart</span>
                                                 </button>
                                                 <div
                                                     class="w-[1px] h-4 bg-slate-200 dark:bg-[#4C566A] mx-1 flex-shrink-0">
