--- a/static/index.html
+++ b/static/index.html
@@ -551,10 +551,10 @@
             class="fixed inset-0 bg-black/50 z-[70] flex items-center justify-center backdrop-blur-sm"
             @click.self="closeTableEditor">
             <div
-                class="bg-white dark:bg-[#2E3440] rounded-xl shadow-2xl w-[90vw] max-w-lg max-h-[80vh] flex flex-col border border-slate-200/60 dark:border-[#3B4252]/50">
+                class="bg-white dark:bg-[#2E3440] rounded-xl shadow-2xl w-[90vw] max-w-lg max-h-[80vh] flex flex-col border border-slate-300 dark:border-slate-600">
                 <!-- Header -->
                 <div
-                    class="flex items-center justify-between px-4 py-1 border-b border-slate-100 dark:border-[#3B4252]/50">
+                    class="flex items-center justify-between px-4 py-1 border-b border-slate-200 dark:border-slate-700 bg-slate-50/50 dark:bg-black/20">
                     <h3 class="text-xs font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider">Edit
                         Table</h3>
                     <button @click="closeTableEditor"
@@ -563,25 +563,49 @@
                     </button>
                 </div>
                 <!-- Spreadsheet Grid -->
-                <div class="flex-1 overflow-auto p-1 bg-slate-50/30 dark:bg-black/10">
+                <div class="flex-1 overflow-auto p-1 bg-white dark:bg-black/10">
                     <table class="w-full border-collapse">
                         <thead>
                             <tr>
                                 <th v-for="(col, cIdx) in tableEditorState.colCount" :key="'header-'+cIdx"
-                                    class="border border-slate-200/60 dark:border-[#4C566A]/40 bg-slate-50/50 dark:bg-[#3B4252]/30 p-0 min-w-[80px]">
-                                    <input v-model="tableEditorState.tableData[0][cIdx]"
-                                        @focus="tableEditorState.activeCol = cIdx; tableEditorState.activeRow = 0"
-                                        class="w-full bg-transparent text-center text-[11px] font-bold text-slate-600 dark:text-[#D8DEE9] outline-none px-1.5 py-0.5">
+                                    class="border border-slate-300 dark:border-slate-600 bg-slate-100/80 dark:bg-[#3B4252] p-0 min-w-[80px]">
+                                    <div class="flex flex-col">
+                                        <input v-model="tableEditorState.tableData[0][cIdx]"
+                                            @focus="tableEditorState.activeCol = cIdx; tableEditorState.activeRow = 0"
+                                            class="w-full bg-transparent text-center text-[11px] font-bold text-slate-700 dark:text-[#ECEFF4] outline-none px-1.5 py-1"
+                                            :style="{ textAlign: tableEditorState.alignments[cIdx] === 'c' ? 'center' : (tableEditorState.alignments[cIdx] === 'r' ? 'right' : 'left') }">
+                                        <div class="flex justify-center gap-1 pb-1 transition-opacity">
+                                            <button @click="setColumnAlignment(cIdx, 'l')"
+                                                class="hover:text-blue-500 transition-colors"
+                                                :class="tableEditorState.alignments[cIdx] === 'l' ? 'text-blue-500' : 'text-slate-400'">
+                                                <span
+                                                    class="material-symbols-rounded text-[14px]">format_align_left</span>
+                                            </button>
+                                            <button @click="setColumnAlignment(cIdx, 'c')"
+                                                class="hover:text-blue-500 transition-colors"
+                                                :class="tableEditorState.alignments[cIdx] === 'c' ? 'text-blue-500' : 'text-slate-400'">
+                                                <span
+                                                    class="material-symbols-rounded text-[14px]">format_align_center</span>
+                                            </button>
+                                            <button @click="setColumnAlignment(cIdx, 'r')"
+                                                class="hover:text-blue-500 transition-colors"
+                                                :class="tableEditorState.alignments[cIdx] === 'r' ? 'text-blue-500' : 'text-slate-400'">
+                                                <span
+                                                    class="material-symbols-rounded text-[14px]">format_align_right</span>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr v-for="(row, rIdx) in tableEditorState.tableData.slice(1)" :key="'row-'+rIdx">
                                 <td v-for="(cell, cIdx) in row" :key="'cell-'+rIdx+'-'+cIdx"
-                                    class="border border-slate-200/60 dark:border-[#4C566A]/40 p-0">
+                                    class="border border-slate-300 dark:border-slate-600 p-0">
                                     <input v-model="tableEditorState.tableData[rIdx + 1][cIdx]"
                                         @focus="tableEditorState.activeCol = cIdx; tableEditorState.activeRow = rIdx + 1"
-                                        class="w-full bg-transparent text-[11px] text-slate-600 dark:text-[#ECEFF4] outline-none px-1.5 py-0.5"
+                                        :style="{ textAlign: tableEditorState.alignments[cIdx] === 'c' ? 'center' : (tableEditorState.alignments[cIdx] === 'r' ? 'right' : 'left') }"
+                                        class="w-full bg-transparent text-[11px] text-slate-700 dark:text-[#D8DEE9] outline-none px-1.5 py-1.5"
                                         @change="tableEditorState.tableData[rIdx + 1][cIdx] = $event.target.value">
                                 </td>
                             </tr>
@@ -592,13 +616,11 @@
                 <div
                     class="flex items-center justify-between px-4 py-1 border-t border-slate-100 dark:border-[#3B4252]/50 bg-white dark:bg-[#2E3440]">
                     <div class="flex gap-1">
-                        <button
-                            @click="tableEditorState.tableData.push(new Array(tableEditorState.colCount).fill('')); tableEditorState.rowCount++"
+                        <button @click="addTableRow"
                             class="px-1.5 py-0.5 text-[10px] font-medium text-slate-400 dark:text-slate-500 bg-white dark:bg-[#2E3440] border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-slate-50 dark:hover:bg-[#4C566A]/20 transition-colors">
                             + Row
                         </button>
-                        <button
-                            @click="() => { tableEditorState.colCount++; tableEditorState.tableData.forEach(row => row.push('')); }"
+                        <button @click="addTableCol"
                             class="px-1.5 py-0.5 text-[10px] font-medium text-slate-400 dark:text-slate-500 bg-white dark:bg-[#2E3440] border border-slate-200/60 dark:border-[#4C566A]/40 rounded hover:bg-slate-50 dark:hover:bg-[#4C566A]/20 transition-colors">
                             + Col
                         </button>
